fix bug #61362

Exception::getTraceAsString &__toString are not able to handle unicode